tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/use-client-protocol/use_client_protocol_with_h2/_test_context/DestinationRule.3161271030.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: use-client-protocol
  namespace: echo-2-88348
spec:
  host: c
  trafficPolicy:
    connectionPool:
      http:
        useClientProtocol: true
    tls:
      mode: DISABLE
